# hotframe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: GUIDE.md
docs/en/: 00-INDEX.md  01-config.md  02-discovery.md  03-apps.md  04-models.md  05-orm.md  06-db.md  07-repository.md  08-migrations.md  09-templating.md  10-components.md  11-live.md  12-views.md  13-http.md  14-signals.md  15-middleware.md  16-auth.md  17-engine.md  18-management.md  19-dev.md  20-utils.md  21-testing.md  GUIDE.md
docs/es/: 00-INDICE.md  01-config.md  02-discovery.md  03-apps.md  04-models.md  05-orm.md  06-db.md  07-repository.md  08-migrations.md  09-templating.md  10-components.md  11-live.md  12-views.md  13-http.md  14-signals.md  15-middleware.md  16-auth.md  17-engine.md  18-management.md  19-dev.md  20-utils.md  21-testing.md
src/hotframe/: __init__.py  asgi.py  bootstrap.py
src/hotframe/apps/: __init__.py  config.py  registry.py  service_facade.py
src/hotframe/auth/: __init__.py  auth.py  crypto.py  csp.py  csrf.py  current_user.py  permissions.py  rate_limit.py  session_helpers.py
src/hotframe/components/: __init__.py  base.py  discovery.py  entry.py  jinja_ext.py  mounting.py  registry.py  rendering.py
src/hotframe/config/: __init__.py  database.py  paths.py  settings.py
src/hotframe/db/: __init__.py  protocols.py  singletons.py  types.py
src/hotframe/dev/: __init__.py  autoreload.py
src/hotframe/discovery/: __init__.py  conventions.py  scanner.py
src/hotframe/engine/: __init__.py  boundary.py  dependency.py  import_manager.py  lifecycle.py  loader.py  marketplace_client.py  models.py  module_runtime.py  pipeline.py  s3_source.py  state.py
src/hotframe/engine/tests/: test_boundary.py  test_module_metadata_lifecycle.py  test_unload_leaks.py
src/hotframe/http/: __init__.py  auth.py  builtin_interceptors.py  client.py  events.py  interceptors.py  loader.py  registry.py
src/hotframe/live/: __init__.py  assets.py  base.py  decorators.py  diff.py  jinja_ext.py  protocol.py  runtime.py  session.py  ws.py
src/hotframe/live/static/: live.js
src/hotframe/live/tests/: test_base.py  test_decorators.py  test_diff.py  test_protocol.py  test_session.py
src/hotframe/management/: __init__.py  cli.py
src/hotframe/middleware/: __init__.py  body_limit.py  csp.py  error_pages.py  i18n_support.py  language.py  module_middleware.py  observability.py  proxy_fix.py  rate_limit.py  session_safe.py  stack.py  stack_manager.py  timeout.py
src/hotframe/migrations/: __init__.py  env_helpers.py  multi_namespace.py  runner.py
src/hotframe/models/: __init__.py  base.py  mixins.py  queryset.py
src/hotframe/orm/: __init__.py  events.py  listeners.py  transactions.py
src/hotframe/repository/: __init__.py  base.py
src/hotframe/signals/: __init__.py  builtins.py  catalog.py  dispatcher.py  hooks.py  types.py
src/hotframe/templating/: __init__.py  engine.py  extensions.py  globals.py  slots.py
src/hotframe/testing/: __init__.py  test_lazy_imports.py
src/hotframe/utils/: __init__.py  observability_context.py  observability_logging.py  observability_metrics.py  observability_telemetry.py
src/hotframe/views/: __init__.py  broadcast.py  responses.py
src/hotframe/views/tests/: test_responses.py
tests/: conftest.py  test_apps.py  test_auth.py  test_broadcast.py  test_cli.py  test_components_discovery.py  test_components_mounting.py  test_components_registry.py  test_components_rendering.py  test_config.py  test_e2e.py  test_engine.py  test_http_clients.py  test_http_interceptors.py  test_migration_ordering.py  test_models.py  test_module_service_helpers.py  test_no_class_name_collisions.py  test_orm.py  test_signals.py  test_testing.py
